--- a/tools/web-generation-model-bitcoin-api-end.html
+++ b/tools/web-generation-model-bitcoin-api-end.html
@@ -16,7 +16,7 @@
 
           <div class="card">
             <div class="card-body">
-	      <br>The beta version page is on <a href='https://bitcoin-data.com/api/swagger-ui/index.html' target='_blank'>Bitcoin API</a>.
+	      <br>The beta version page is on <a href='https://bitcoin-data.com/api/swagger-ui/index.html' target='_blank'>Bitcoin API Free</a>.
 	      <br><br>This is the provisional website of bitcoin-data.com, a website where Bitcoin data will be made available for free through a REST API, it will be mostly On Chain metrics of the Bitcoin Blockchain.
             </div>  
           </div>
