--- a/graphics/etf_dark.html
+++ b/graphics/etf_dark.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Bitcoin ETF: Total balance and flow</title>
+    <title>Bitcoin ETF: Total balance and daily flow</title>
 
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-ZR3ZFTF2FK"></script> 
     <script> window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'G-ZR3ZFTF2FK'); </script>
@@ -80,7 +80,7 @@
                 }
             },
             title: {
-                text: 'Bitcoin ETF: Total balance and flow', 
+                text: 'Bitcoin ETF: Total balance and daily flow', 
                 align: 'left',
             },
 
