--- a/graphics/etf.html
+++ b/graphics/etf.html
@@ -117,7 +117,7 @@
                 opposite: false
             }, {
                 title: {
-                    text: 'ETF Flow BTC'
+                    text: 'ETF Daily Flow BTC'
                 },
                 top: '70%',
                 height: '30%',
