--- a/etf_btc_dark.html
+++ b/etf_btc_dark.html
@@ -565,6 +565,23 @@
 
       </div>
     </section>
+  <br>
+
+    <section>
+      <div class="container">
+        <a href="graphics/etf.html">
+          <h5>Bitcoin ETF</h5>
+        </a>
+        <p> 
+	  The BTC held by the different ETFs, Blackrock (IBIT), The Grayscale Bitcoin Trust (GBTC), Fidelity (FBTC), Ark Invest /21Shares (ARKB), Bitwise (BITB), Franklin (EZBC), Investco/Galaxy (BTCO) , Vaneck (HODL), Valkyrie (BRR) and Wisdomtree (BTCW) and the percentage of bitcoin supply it represents.
+	  <br><br>
+          The black line represents the BTC supply accumulated by companies that have ETFs.
+	  <br>
+          The bars represent the amount of BTC each ETF holds.
+	</p>
+
+      </div>
+    </section>
 
   </main><!-- End #main -->
 
@@ -591,13 +608,10 @@
   </div>
 
   <!-- Vendor JS Files -->
-  <script src="assets/vendor/apexcharts/apexcharts.min.js"></script>
   <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="assets/vendor/chart.js/chart.umd.js"></script>
-  <script src="assets/vendor/echarts/echarts.min.js"></script>
-  <script src="assets/vendor/quill/quill.min.js"></script>
-  <script src="assets/vendor/simple-datatables/simple-datatables.js"></script>
-  <script src="assets/vendor/tinymce/tinymce.min.js"></script>
+  <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
+  <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
+  <script src="assets/vendor/aos/aos.js"></script>
   <script src="assets/vendor/php-email-form/validate.js"></script>
   <script src="assets/js/main.js"></script>
   <script src="assets/js/bgeometrics.js"></script>
