--- a/graphics/eft_btc_dark.html
+++ b/graphics/eft_btc_dark.html
@@ -241,7 +241,8 @@
                 enabled:true,
                 floating: true,
                 verticalAlign: 'top',
-                align:'center'
+                align:'center',
+                y: 25
             },
 
             rangeSelector: {
