--- a/graphics/etf_btc.html
+++ b/graphics/etf_btc.html
@@ -239,7 +239,8 @@
                 enabled:true,
                 floating: true,
                 verticalAlign: 'top',
-                align:'center'
+                align:'center',
+                y: 25
             },
 
             rangeSelector: {
