--- a/tools/web-generation-model-end-index-3m-dark.html
+++ b/tools/web-generation-model-end-index-3m-dark.html
@@ -64,12 +64,22 @@
 
       <div class="row">
         <div class="col-lg-4">
-
           <div class="card">
             <div class="card-body">
               <h5 class="card-title">Bitcoin Price History</h5>
               <a href="bitcoin_price_usd_g_dark.html">
                 <img src="assets/img/gallery/bitcoin-price-history.png" class="card-img-top" alt="Bitcoin Price USD">
+              </a>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-4">
+          <div class="card">
+            <div class="card-body">
+              <h5 class="card-title">Price Live</h5>
+              <a href="ohlc_1m.html">
+                <img src="assets/img/gallery/Price-Live.png" class="card-img-top" alt="Price Live BTC">
               </a>
             </div>
           </div>
