--- a/index_6m.html
+++ b/index_6m.html
@@ -625,6 +625,17 @@
         <div class="col-lg-4">
           <div class="card">
             <div class="card-body">
+              <h5 class="card-title">Price Live</h5>
+              <a href="ohlc_1m.html">
+                <img src="assets/img/gallery/Price-Live.png" class="card-img-top" alt="Price Live BTC">
+              </a>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-4">
+          <div class="card">
+            <div class="card-body">
               <h5 class="card-title">Bitcoin Realized Price</h5>
               <a href="realized_price_g.html">
                 <img src="assets/img/gallery/realized_price.png" class="card-img-top" alt="Bitcoin Realized Price">
