--- a/index_3m_dark.html
+++ b/index_3m_dark.html
@@ -624,7 +624,7 @@
         <div class="col-lg-4">
           <div class="card">
             <div class="card-body">
-              <h5 class="card-title">Price Live</h5>
+              <h5 class="card-title">Bitcoin Price Live</h5>
               <a href="ohlc_1m.html">
                 <img src="assets/img/gallery/Price-Live.png" class="card-img-top" alt="Price Live BTC">
               </a>
