--- a/index_3m_dark.html
+++ b/index_3m_dark.html
@@ -635,6 +635,17 @@
         <div class="col-lg-4">
           <div class="card">
             <div class="card-body">
+              <h5 class="card-title">Bitcoin OHLC</h5>
+              <a href="ohlc.html">
+                <img src="assets/img/gallery/OHLC.png" class="card-img-top" alt="Bitcoin OHLC">
+              </a>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-4">
+          <div class="card">
+            <div class="card-body">
               <h5 class="card-title">Bitcoin Realized Price</h5>
               <a href="realized_price_g_dark.html">
                 <img src="assets/img/gallery/realized_price.png" class="card-img-top" alt="Bitcoin Realized Price">
