--- a/graphics/ohlc_1m_dark.html
+++ b/graphics/ohlc_1m_dark.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Bitcoin OHLC Minute Binance</title>
+    <title>Bitcoin OHLC (10m), minute update (Binance)</title>
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-ZR3ZFTF2FK"></script> 
     <script> window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'G-ZR3ZFTF2FK'); </script>
 </head>
@@ -111,7 +111,7 @@
         } 
     },  
     title: {
-        text: 'Bitcoin OHLC Minute Binance',
+        text: 'Bitcoin OHLC (10m), minute update (Binance)',
         align: 'left',
     },
 
