--- a/ohlc_1m.html
+++ b/ohlc_1m.html
@@ -7,7 +7,7 @@
 
   <title>BGeometrics</title>
   <meta content="Bitcoin Price" name="description">
-  <meta content="Bitcoin OHLC Minute Binance" name="keywords">
+  <meta content="Bitcoin OHLC candle 10 minute Binance" name="keywords">
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
@@ -556,7 +556,7 @@
           <div class="row">
             <div id="container-iframe" class="row d-flex justify-content-center">
               <div class="col-lg-12-iframe col-md-6-iframe col-sm-3-iframe">
-                <iframe class="iframe" width="100%" height="600px" src="graphics/ohlc_1m.html" allow="fullscreen" title="Bitcoin OHLC Minute Binance" scrolling="no" frameBorder="0"></iframe>
+                <iframe class="iframe" width="100%" height="600px" src="graphics/ohlc_1m.html" allow="fullscreen" title="Bitcoin OHLC candle 10 minutes Binance" scrolling="no" frameBorder="0"></iframe>
               </div>
             </div>
 
@@ -569,10 +569,10 @@
     <section>
       <div class="container">
         <a href="graphics/ohlc_1m.html">
-          <h5>Bitcoin OHLC (Open, High, Low, Close) Minute</h5>
+          <h5>Bitcoin OHLC (Open, High, Low, Close) 10 minutes</h5>
         </a>
         <p> 
-	  OHLC chart (Open, High, Low and Close) of bitcoin with periodicity and minute update.
+	  OHLC chart (Open, High, Low and Close) of bitcoin candles 10 minute and minute update.
         </p>
 
         <p>
