--- a/tools/web-generation-end-ohlc-1m.html
+++ b/tools/web-generation-end-ohlc-1m.html
@@ -2,10 +2,10 @@
     <section>
       <div class="container">
         <a href="graphics/ohlc_1m.html">
-          <h5>Bitcoin OHLC (Open, High, Low, Close) Minute</h5>
+          <h5>Bitcoin OHLC (Open, High, Low, Close) 10 minutes</h5>
         </a>
         <p> 
-	  OHLC chart (Open, High, Low and Close) of bitcoin with periodicity and minute update.
+	  OHLC chart (Open, High, Low and Close) of bitcoin candles 10 minute and minute update.
         </p>
 
         <p>
