--- a/bitcoin_price_g_log.html
+++ b/bitcoin_price_g_log.html
@@ -597,6 +597,11 @@
                   The third halving event occurred on May 11, 2020 (UTC) at block 630000.
                 </p>
               </li>
+              <li> 
+                <p>
+                  The four halving event occurred on April 20, 2024 (UTC) at block 840000.
+                </p>
+              </li>
             </ul>
           </div>
         </div>
