--- a/graphics/distribution_coin.html
+++ b/graphics/distribution_coin.html
@@ -144,6 +144,7 @@
             series: [{
                 name: 'BTC price',
                 data: data_price,
+                color: 'black',
                 type: 'line',
                 tooltip: {
                     valueDecimals: 2
