--- a/graphics/distribution_coin_dark.html
+++ b/graphics/distribution_coin_dark.html
@@ -146,6 +146,7 @@
             series: [{
                 name: 'BTC price',
                 data: data_price,
+                color: 'white',
                 type: 'line',
                 tooltip: {
                     valueDecimals: 2
