--- a/graphics/distribution_realized_price.html
+++ b/graphics/distribution_realized_price.html
@@ -88,12 +88,13 @@
                 plotOptions: {
                     column: {
                         borderWidth: 0
-                    }
+                    },
                 },
                 series: [
                     {
                         name: 'Volume BTC',
-                        data: data_y
+                        data: data_y,
+                        groupPadding: 0,
                     }
                 ],
                 legend:{
