--- a/graphics/distribution_realized_price_dark.html
+++ b/graphics/distribution_realized_price_dark.html
@@ -95,7 +95,8 @@
                 series: [
                     {
                         name: 'Volume BTC',
-                        data: data_y
+                        data: data_y,
+                        groupPadding: 0,
                     }
                 ],
                 legend:{
