--- a/graphics/m2_dark.html
+++ b/graphics/m2_dark.html
@@ -134,7 +134,8 @@
                 tooltip: {
                     valueDecimals: 2
                 },
-                yAxis: 0
+                yAxis: 0,
+                groupPadding: 0,
             },{
                 name: 'M2',
                 type: 'line',
