--- a/graphics/workspace.html
+++ b/graphics/workspace.html
@@ -95,7 +95,7 @@
                 }
             },
             title: {
-                text: 'BGeometrics Workspace',
+                text: 'BGeometrics Workspace (Beta)',
                 align: 'left',
             },
 
