--- a/graphics/workspace.html
+++ b/graphics/workspace.html
@@ -24,7 +24,6 @@
             <option selected>Metrics On-Chain</option>
             <option value="realized_price">Realized Price</option>
             <option value="delta_cap">Delta cap</option>
-            <option value="aviv">AVIV</option>
             <option value="power_law">Power Law</option>
             <option value="50dma">50 day MA</option>
             <option value="155dma">155 day MA</option>
@@ -37,6 +36,7 @@
             <option value="sth_mvrv_axis">MVRV STH</option>
             <option value="lth_mvrv_axis">MVRV LTH</option>
             <option value="nupl_axis">NUPL</option>
+            <option value="aviv_axis">AVIV</option>
             <option value="fear_greed">Fear and Greed</option>
         </select>
         &nbsp;
