--- a/tools/web-generation-model-workspace-end.html
+++ b/tools/web-generation-model-workspace-end.html
@@ -11,7 +11,7 @@
             <div id="searchResults"></div>
             <div id="container-iframe" class="row d-flex justify-content-center">
               <div class="col-lg-12-iframe col-md-6-iframe col-sm-3-iframe">
-                <iframe class="iframe" width="100%" height="700px" src="graphics/workspace.html" allow="fullscreen" title="BGeometrics Workspace" scrolling="no" frameBorder="0"></iframe>
+                <iframe class="iframe" width="100%" height="700px" margin="auto" padding="1px" src="graphics/workspace.html" allow="fullscreen" title="BGeometrics Workspace" scrolling="no" frameBorder="0"></iframe>
               </div>
             </div>
 
