--- a/graphics/workspace.html
+++ b/graphics/workspace.html
@@ -9,6 +9,7 @@
 <body>
     <link rel="stylesheet" type="text/css" href="https://code.highcharts.com/css/stocktools/gui.css">
     <link rel="stylesheet" type="text/css" href="https://code.highcharts.com/css/annotations/popup.css">
+
     <script src="https://code.highcharts.com/stock/highstock.js"></script>
     <script src="https://code.highcharts.com/stock/indicators/indicators-all.js"></script>
     <script src="https://code.highcharts.com/stock/modules/drag-panes.js"></script>
@@ -18,6 +19,7 @@
     <script src="https://code.highcharts.com/modules/stock-tools.js"></script>
     <script src="https://code.highcharts.com/stock/modules/heikinashi.js"></script>
     <script src="https://code.highcharts.com/modules/accessibility.js"></script>
+    <script src="assets/js/bgeometrics.js"></script>
 
     <figure class="highcharts-figure">
         <select class="form-select" id="metrics">
@@ -40,7 +42,10 @@
             <option value="fear_greed">Fear and Greed</option>
         </select>
         &nbsp;
-        <button id="showButton">Show</button>
+        <button class="btn btn-light dropdown-toggle" type="button" id="showButton" data-bs-toggle="dropdown" aria-expanded="false">
+            <span id="currentMode">Show</span>
+        </button>
+        <!--<button id="showButton">Show</button>-->
 
         <div id="container-iframe" style="width:100%; height:600px; margin: 0 auto;"></div>
     </figure>
@@ -179,37 +184,7 @@
         });
     })();
 
-    document.getElementById('showButton').addEventListener('click', function() {
-        var e = document.getElementById("metrics");
-        var value = e.value;
-        var text = e.options[e.selectedIndex].text;
-        var yAxis = 0;
-
-        console.log(e.value);
-        console.log(text);
-
-        console.log(value.indexOf('_axis'));
-        if (value.indexOf('_axis') > 0) {
-            value = value.substring(0, value.indexOf('_axis'));
-            yAxis = 1;
-        }
-        data = fetch('https://charts.bgeometrics.com/files/' + value + '.json')
-            .then(response => response.json());
-
-        Promise.all([data]).then(values => {
-            chart.addSeries({
-                id: value,
-                name: text,
-                data: values[0],
-                tooltip: {
-                    valueDecimals: 2
-                },
-                yAxis: yAxis
-                
-            });
-        });
-
-    });
+    document.getElementById('showButton').addEventListener("click", getMetric);
 
     </script>
 
