--- a/graphics/workspace.html
+++ b/graphics/workspace.html
@@ -19,7 +19,7 @@
     <script src="https://code.highcharts.com/modules/stock-tools.js"></script>
     <script src="https://code.highcharts.com/stock/modules/heikinashi.js"></script>
     <script src="https://code.highcharts.com/modules/accessibility.js"></script>
-    <script src="assets/js/bgeometrics.js"></script>
+    <script src="https://charts.bgeometrics.com/assets/js/bgeometrics.js"></script>
 
     <figure class="highcharts-figure">
         <select class="form-select" id="metrics">
