--- a/graphics/workspace.html
+++ b/graphics/workspace.html
@@ -41,15 +41,9 @@
             <option value="aviv_axis">AVIV</option>
             <option value="fear_greed">Fear and Greed</option>
         </select>
-        &nbsp;
-        <button class="btn btn-light dropdown-toggle" type="button" id="showButton" data-bs-toggle="dropdown" aria-expanded="false">
-            <span id="currentMode">Show</span>
-        </button>
-        <!--<button id="showButton">Show</button>-->
 
         <div id="container-iframe" style="width:100%; height:600px; margin: 0 auto;"></div>
     </figure>
-
 
     <script>
         (async () => {
@@ -184,7 +178,7 @@
         });
     })();
 
-    document.getElementById('showButton').addEventListener("click", getMetric);
+    document.getElementById('metrics').addEventListener("change", getMetric);
 
     </script>
 
