--- a/graphics/workspace_dark.html
+++ b/graphics/workspace_dark.html
@@ -96,7 +96,7 @@
                 }
             },
             title: {
-                text: 'BGeometrics Workspace (Beta)',
+                text: 'BGeometrics Workspace',
                 align: 'left',
             },
 
