--- a/graphics/workspace.html
+++ b/graphics/workspace.html
@@ -94,7 +94,7 @@
                 }
             },
             title: {
-                text: 'BGeometrics Workspace (Beta)',
+                text: 'BGeometrics Workspace',
                 align: 'left',
             },
 
