--- a/graphics/workspace_dark.html
+++ b/graphics/workspace_dark.html
@@ -25,7 +25,7 @@
 
     <figure class="highcharts-figure">
         <select class="form-select" id="metrics">
-            <option selected>Metrics On-Chain</option>
+            <option selected>Bitcoin Metrics On-Chain</option>
             <option value="realized_price">Realized Price</option>
             <option value="delta_cap">Delta cap</option>
             <option value="power_law">Power Law</option>
