--- a/graphics/workspace.html
+++ b/graphics/workspace.html
@@ -27,6 +27,7 @@
             <option value="realized_price">Realized Price</option>
             <option value="delta_cap">Delta cap</option>
             <option value="power_law">Power Law</option>
+            <option value="power_law_floor">Power Law Floor</option>
             <option value="50dma">50 day MA</option>
             <option value="155dma">155 day MA</option>
             <option value="200dma">200 day MA</option>
