--- a/graphics/workspace.html
+++ b/graphics/workspace.html
@@ -40,7 +40,14 @@
             <option value="lth_mvrv_axis">MVRV LTH</option>
             <option value="nupl_axis">NUPL</option>
             <option value="aviv_axis">AVIV</option>
-            <option value="fear_greed">Fear and Greed</option>
+            <option value="addresses_active_axis">Active Addresses</option>
+            <option value="rhodl_1m_axis">RHodl 1m</option>
+            <option value="market_cap_axis">Market Capitalization</option>
+            <option value="realized_cap_axis">Realized Capitalization</option>
+            <option value="investor_cap_axis">Investor Capitalization</option>
+            <option value="thermo_cap_axis">Thermo Capitalization</option>
+            <option value="fear_greed_axis">Fear and Greed</option>
+            <option value="address_10k_1k_axis">Addr. coins BTC &gt;1000 &lt;10000</option>
         </select>
 
         <div id="container-iframe" style="width:100%; height:600px; margin: 0 auto;"></div>
