--- a/graphics/workspace_dark.html
+++ b/graphics/workspace_dark.html
@@ -49,7 +49,7 @@
             <option value="investor_cap_axis">Investor Capitalization</option>
             <option value="thermo_cap_axis">Thermo Capitalization</option>
             <option value="fear_greed_axis">Fear and Greed</option>
-            <option value="hw_age_6m__axis">BTC held LTH >6m (%)</option>
+            <option value="hw_age_6m__axis">BTC LTH >6m (%)</option>
             <option value="address_10k_1k_axis">Addr. coins BTC &gt;1000 &lt;10000</option>
         </select>
 
