--- a/tools/web-generation-model-workspace-end.html
+++ b/tools/web-generation-model-workspace-end.html
@@ -27,11 +27,13 @@
           <h5>Workspace for BGeometrics charts</h5>
         </a>
         <p> 
-          In this graph, which initially only appears the price of bitcoin, different metrics can be incorporated on demand.
-	  <br><br>
-          In the drop-down menu at the top left you will find the available metrics and once selected they will be added to the graph.
-	  <br><br>
-          If you do not want to view it, you can click on the legend to stop it from being displayed on the graph.
+          On this screen we increase the operation by allowing the inclusion of on-chain bitcoin metrics on demand.
+          <br><br>
+          The graph initially appears only the price of BTC but different metrics can be selected and incorporated.
+          <br><br>
+          In the drop-down menu at the top left you will find the available metrics and once selected they will be added to the chart.
+          <br><br>
+          If you do not want to display a metric you can click on the legend to prevent it from being displayed on the chart.
         </p>
       </div>
     </section>
