--- a/tools/web-generation-model-workspace-end.html
+++ b/tools/web-generation-model-workspace-end.html
@@ -19,7 +19,9 @@
         </div><!-- End Left side columns -->
 
       </div>
+    </section>
 
+    <section>
       <div class="container">
         <a href="graphics/workspace.html">
           <h5>Workspace for BGeometrics charts</h5>
