--- a/workspace_dark.html
+++ b/workspace_dark.html
@@ -566,7 +566,9 @@
         </div><!-- End Left side columns -->
 
       </div>
+    </section>
 
+    <section>
       <div class="container">
         <a href="graphics/workspace.html">
           <h5>Workspace for BGeometrics charts</h5>
