--- a/graphics/workspace.html
+++ b/graphics/workspace.html
@@ -38,6 +38,8 @@
             <option value="mvrv_axis">MVRV</option>
             <option value="sth_mvrv_axis">MVRV STH</option>
             <option value="lth_mvrv_axis">MVRV LTH</option>
+            <option value="sth_realized_price">Realized Price STH</option>
+            <option value="lth_realized_price">Realized Price LTH</option>
             <option value="nupl_axis">NUPL</option>
             <option value="aviv_axis">AVIV</option>
             <option value="addresses_active_axis">Active Addresses</option>
