--- a/graphics/wtest.html
+++ b/graphics/wtest.html
@@ -223,10 +223,16 @@
       }
    }
 
+    function deleteCookie(name) {
+        document.cookie = name +'=; Path=/; Expires=Thu, 01 Jan 1970 00:00:01 GMT;';
+    }
+
     function test() {
         console.log("get cookie " + document.cookie);
         cook = getCookieValue("bg");
         console.log("get cookie bg " + cook);
+
+        deleteCookie("bg");
 
         var e = document.getElementById("metrics");
         var value = e.value;
