--- a/graphics/wtest.html
+++ b/graphics/wtest.html
@@ -225,6 +225,7 @@
 
     function deleteCookie(name) {
         document.cookie = name +'=; Path=/; Expires=Thu, 01 Jan 1970 00:00:01 GMT;';
+        console.log("Delete cookie " + name);
     }
 
     function test() {
