--- a/graphics/wtest.html
+++ b/graphics/wtest.html
@@ -220,7 +220,9 @@
     function test() {
         console.log("get cookie " + document.cookie);
         cook = getCookieValue("bg");
-        console.log("get cookie bg " + cook);
+
+        /* Add charts */
+        console.log("Add charts: " + cook);
 
         deleteCookie("bg");
 
